--- a/Neon-Racer/ngm/index.html
+++ b/Neon-Racer/ngm/index.html
@@ -4,7 +4,7 @@
   <title>Need For Speed</title>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
-<link rel="icon" href="/Neon-Racer/images/neonracericon.png"/>
+<link rel="icon" href="/The-Bunker/Neon-Racer/images/neonracericon.png"/>
 
   <style>
   body {
@@ -287,17 +287,17 @@ h2:hover
 </head> 
 
 <body> 
-<a class="foreward" href="/Neon-Racer/" style="position: absolute; top: 0%; ">
+<a class="foreward" href="/The-Bunker/Neon-Racer/" style="position: absolute; top: 0%; ">
       BACK
   </a>
   <center>
-    <img src="/Neon-Racer/bugatti.png" style="top: 45px; "></img>
+    <img src="/The-Bunker/Neon-Racer/bugatti.png" style="top: 45px; "></img>
   </center>
 <center>
   <h1 class="neon" id="headlol" data-text="Javascript-Racer">
-<img src="/Neon-Racer/palmtreeoutline.png" style="width: 90px; margin-right: 9px; "></img> 
+<img src="/The-Bunker/Neon-Racer/palmtreeoutline.png" style="width: 90px; margin-right: 9px; "></img> 
   JAVASCRIPT-RACER 
-  <img src="/Neon-Racer/palmtreeoutline.png" style="width: 90px; margin-right: 9px; "></img>
+  <img src="/The-Bunker/Neon-Racer/palmtreeoutline.png" style="width: 90px; margin-right: 9px; "></img>
   </h1>
 
  </center>
