--- a/Neon-Racer/og/index.html
+++ b/Neon-Racer/og/index.html
@@ -5,7 +5,7 @@
   <title>Neon-Racer</title>
   <meta charset="utf-8"/>
   <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
-<link rel="icon" href="/Neon-Racer/images/neonracericon.png"/>
+<link rel="icon" href="/The-Bunker/Neon-Racer/images/neonracericon.png"/>
 <style>
 body {
   margin: 0;
@@ -273,7 +273,7 @@ h2:hover
 <body> 
   <!--<div id="container"></div>-->
   <!--<div class="cursor"></div>-->
-      <script src="/Neon-Racer/sparkle.min.js"></script>
+      <script src="/The-Bunker/Neon-Racer/sparkle.min.js"></script>
   <script>
    /* const cursor = document.querySelector('.cursor');
 
@@ -291,7 +291,7 @@ h2:hover
     */
 
   </script>
-  <a class="back" href="/Neon-Racer/" style="position: absolute; top: 0%; ">
+  <a class="back" href="/The-Bunker/Neon-Racer/" style="position: absolute; top: 0%; ">
       BACK
   </a>
   <center>
@@ -299,9 +299,9 @@ h2:hover
   </center>
 <center>
   <h1 class="neon" id="headlol" data-text="Javascript-Racer">
-<img src="/Neon-Racer/palmtreeoutline.png" style="width: 90px; margin-right: 9px; "></img> 
+<img src="/The-Bunker/Neon-Racer/palmtreeoutline.png" style="width: 90px; margin-right: 9px; "></img> 
   JAVASCRIPT-RACER 
-  <img src="/Neon-Racer/palmtreeoutline.png" style="width: 90px; margin-right: 9px; "></img>
+  <img src="/The-Bunker/Neon-Racer/palmtreeoutline.png" style="width: 90px; margin-right: 9px; "></img>
   </h1>
 
   </center>
