--- a/Neon-Racer/og/v1.straight.html
+++ b/Neon-Racer/og/v1.straight.html
@@ -67,7 +67,7 @@
 
   <div id='instructions'>
     <p>Use the <b>arrow keys</b> to drive the car.</p>
-    <p><b><a href="/Neon-Racer/v1.straight.html">Click Here</a></b> to go to the neon version
+    <p><b><a href="/The-Bunker/Neon-Racer/v1.straight.html">Click Here</a></b> to go to the neon version
   </div>
 
   <div id="racer">
