--- a/Neon-Racer/og/v2.curves.html
+++ b/Neon-Racer/og/v2.curves.html
@@ -69,7 +69,7 @@
 
   <div id='instructions'>
     <p>Use the <b>arrow keys</b> to drive the car.</p>
-    <p><b><a href="/Neon-Racer/v2.curves.html">Click Here</a></b></p>
+    <p><b><a href="/The-Bunker/Neon-Racer/v2.curves.html">Click Here</a></b></p>
   </div>
 
   <div id="racer">
