--- a/Neon-Racer/og/v3.hills.html
+++ b/Neon-Racer/og/v3.hills.html
@@ -68,7 +68,7 @@
 
   <div id='instructions'>
     <p>Use the <b>arrow keys</b> to drive the car.</p>
-    <p><b><a href="/Neon-Racer/v3.hills.html">Click Here</a></b> to go to the <b>neon version</b></p>
+    <p><b><a href="/The-Bunker/Neon-Racer/v3.hills.html">Click Here</a></b> to go to the <b>neon version</b></p>
   </div>
 
   <div id="racer">
