--- a/Neon-Racer/og/v4.final.html
+++ b/Neon-Racer/og/v4.final.html
@@ -69,7 +69,7 @@
 
   <div id='instructions'>
     <p>Use the <b>arrow keys</b> to drive the car.</p>
-    <p><b><a href="/Neon-Racer/v4.final.html">Click Here</a></b> to go to the neon version</p>
+    <p><b><a href="/The-Bunker/Neon-Racer/v4.final.html">Click Here</a></b> to go to the neon version</p>
   </div>
 
   <div id="racer">
