--- a/gam3s.html
+++ b/gam3s.html
@@ -19,7 +19,7 @@
     <center>⁣</center>
 <center>⁣</center>
   <center>
-    <a href='neonracer.html' id="o">Neon Racer</a>
+    <a href='Neon-Racer/' id="o">Neon Racer</a>
   </center>
   <center>⁣</center>
  <center>
