--- a/gam3s.html
+++ b/gam3s.html
@@ -30,6 +30,10 @@
     <a href='cookieclicker/index.html' id="o">Cookie Clicker</a>
   </center>
   <center>⁣</center>
+     <center>
+    <a href='mario/main.html' id="o">Mario</a>
+  </center>
+  <center>⁣</center>
     <script src="script.js"></script>
   </body>
 </html>
