--- a/gam3s.html
+++ b/gam3s.html
@@ -34,6 +34,10 @@
     <a href='mario/main.html' id="o">Mario</a>
   </center>
   <center>⁣</center>
+     <center>
+    <a href='3D-Hartwig-chess-set-master/' id="o">Mario</a>
+  </center>
+  <center>⁣</center>
     <script src="script.js"></script>
   </body>
 </html>
