--- a/gam3s.html
+++ b/gam3s.html
@@ -35,7 +35,7 @@
   </center>
   <center>⁣</center>
      <center>
-    <a href='3D-Hartwig-chess-set-master/' id="o">Mario</a>
+    <a href='3D-Hartwig-chess-set-master/' id="o">3D Hartwig Chess</a>
   </center>
   <center>⁣</center>
     <script src="script.js"></script>
