--- a/gam3s.html
+++ b/gam3s.html
@@ -38,6 +38,10 @@
     <a href='3D-Hartwig-chess-set-master/' id="o">3D Hartwig Chess</a>
   </center>
   <center>⁣</center>
+     <center>
+    <a href='breaklock-master/' id="o">Breaklock</a>
+  </center>
+  <center>⁣</center>
     <script src="script.js"></script>
   </body>
 </html>
