--- a/gam3s.html
+++ b/gam3s.html
@@ -42,6 +42,9 @@
     <a href='breaklock-master/' id="o">Breaklock</a>
   </center>
   <center>⁣</center>
+  <center>
+    <a href='vibeos-legacy-master/' id="o">VibeOS Emulator</a>
+  </center>
     <script src="script.js"></script>
   </body>
 </html>
