some changes ig

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <center>⁣</center>
 
   <center>
-    <a href='b?.html' id="o">Bookmarklets</a>
+    <a href='b.html' id="o">Bookmarklets</a>
   </center>
   <center>⁣</center>
 
