--- a/b.html
+++ b/b.html
@@ -1,8 +1,14 @@
+<center>
 Bookmarklets lol
+</center>
+<center>
 this is the beta page
-
+</center>
+<center>
  1. Put a fly on your web page (trigger warning)
+ </center>
 javascript:var e=window.document.createElement('script');e.setAttribute('src','https://urugate.com/fly3.js');window.document.body.appendChild(e);void(0);
-
+<center>
  2. Turn every image into a rick roll (made by yours truly)
+ </center>
 javascript:(function(){Array.prototype.slice.call(document.querySelectorAll('img')).map(function(el){el.src = 'https://media.tenor.com/images/d0f644525d3be9eb3b287edca97d20f4/tenor.gif';});}())
