--- a/b.html
+++ b/b.html
@@ -1,3 +1,8 @@
+<html>
+    <head>
+        <link rel="stylesheet" href="style.css">
+    </head>
+    <body>
 <center>
 Bookmarklets lol
 </center>
@@ -12,3 +17,5 @@ javascript:var e=window.document.createElement('script');e.setAttribute('src','h
  2. Turn every image into a rick roll (made by yours truly)
  </center>
 javascript:(function(){Array.prototype.slice.call(document.querySelectorAll('img')).map(function(el){el.src = 'https://media.tenor.com/images/d0f644525d3be9eb3b287edca97d20f4/tenor.gif';});}())
+</body>
+</html>
