--- a/b.html
+++ b/b.html
@@ -2,6 +2,14 @@
     <head>
         <link rel="stylesheet" href="style.css">
         <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+    <style>
+        h2:hover {
+cursor:default;
+        }
+        a:hover {
+            cursor: pointer;
+        }
+    </style>
     </head>
     <body>
 <center>
