--- a/b.html
+++ b/b.html
@@ -13,7 +13,7 @@ cursor:default;
     </head>
     <body>
 <center>
-Bookmarklets lol
+<h1 class="neon">Bookmarklets lol</h1>
 </center>
 <center>
 this is the beta page
