--- a/b.html
+++ b/b.html
@@ -15,6 +15,7 @@ cursor:default;
 <center>
 <h1 class="neon">Bookmarklets lol</h1>
 </center>
+<span>
 <center>
 this is the beta page
 </center>
@@ -56,5 +57,6 @@ function myFunctionTwo() {
   alert("Copied the text: " + copyText.value);
 } 
 </script>
+</span>
 </body>
 </html>
