stuff happened idk lol

--- a/b.html
+++ b/b.html
@@ -15,7 +15,7 @@ cursor:default;
 <center>
 <h1 class="neon">Bookmarklets lol</h1>
 </center>
-<span>
+<span id="uhhh">
 <center>
 this is the beta page
 </center>
