--- a/b.html
+++ b/b.html
@@ -13,9 +13,8 @@ cursor:default;
     </head>
     <body>
 <center>
-<h1 class="neon">Bookmarklets lol</h1>
+<h1>Bookmarklets lol</h1>
 </center>
-<span id="uhhh">
 <center>
 this is the beta page
 </center>
@@ -57,6 +56,5 @@ function myFunctionTwo() {
   alert("Copied the text: " + copyText.value);
 } 
 </script>
-</span>
 </body>
 </html>
