--- a/b.html
+++ b/b.html
@@ -13,7 +13,7 @@ cursor:default;
     </head>
     <body>
 <center>
-<h1>Bookmarklets lol</h1>
+<h1 style="position: static; color: hsl(157, 100%, 50%);">Bookmarklets lol</h1>
 </center>
 <center>
 this is the beta page
