--- a/b.html
+++ b/b.html
@@ -15,7 +15,7 @@ cursor:default;
 <center>
 <h1 style="position: static; color: hsl(157, 100%, 50%);">Bookmarklets lol</h1>
 </center>
-<center>
+<center style="color: hsl(157, 100%, 50%);">
 this is the beta page
 </center>
 <center>
