--- a/b.html
+++ b/b.html
@@ -19,11 +19,11 @@ cursor:default;
 this is the beta page
 </center>
 <center>
- <a>1. Put a fly on your web page (trigger warning)</a>
+ <a onclick="myFunction()">1. Put a fly on your web page (trigger warning)</a>
  </center>
 <h2 id="one">javascript:var e=window.document.createElement('script');e.setAttribute('src','https://urugate.com/fly3.js');window.document.body.appendChild(e);void(0);</h2>
 <center>
-<a> 2. Turn every image into a rick roll (made by yours truly)</a>
+<a onclick="myFunctionTwo()"> 2. Turn every image into a rick roll (made by yours truly)</a>
  </center>
 <h2 id="two">javascript:(function(){Array.prototype.slice.call(document.querySelectorAll('img')).map(function(el){el.src = 'https://media.tenor.com/images/d0f644525d3be9eb3b287edca97d20f4/tenor.gif';});}())</h2>
 <script>
