--- a/b.html
+++ b/b.html
@@ -5,6 +5,7 @@
     <style>
         h2:hover {
 cursor:default;
+            background-color: #ffffff00;
         }
         a:hover {
             cursor: pointer;
