--- a/b.html
+++ b/b.html
@@ -10,9 +10,9 @@ cursor:default;
         a:hover {
             cursor: pointer;
         }
-        input {
+        /*input {
         visibility: hidden;
-        }
+        }*/
         
     </style>
     </head>
