--- a/b.html
+++ b/b.html
@@ -10,9 +10,10 @@ cursor:default;
         a:hover {
             cursor: pointer;
         }
-        /*input {
-        visibility: hidden;
-        }*/
+        input {
+            color: #ffffff00;
+            background-color: #ffffff00;
+        }
         
     </style>
     </head>
