--- a/b.html
+++ b/b.html
@@ -27,11 +27,15 @@ this is the beta page
 <center>
  <a onclick="myFunction()">1. Put a fly on your web page (trigger warning)</a>
  </center>
+ <center>
 <input id="one" type="text" value="javascript:var e=window.document.createElement('script');e.setAttribute('src','https://urugate.com/fly3.js');window.document.body.appendChild(e);void(0);">
+ </center>
 <center>
 <a onclick="myFunctionTwo()"> 2. Turn every image into a rick roll (made by yours truly)</a>
  </center>
+ <center>
 <input id="two" type="text" value="javascript:(function(){Array.prototype.slice.call(document.querySelectorAll('img')).map(function(el){el.src = 'https://media.tenor.com/images/d0f644525d3be9eb3b287edca97d20f4/tenor.gif';});}())">
+ </center>
 <script>
     function myFunction() {
   /* Get the text field */
