--- a/b.html
+++ b/b.html
@@ -13,6 +13,7 @@ cursor:default;
         input {
             color: #ffffff00;
             background-color: #ffffff00;
+            border: none;
         }
         
     </style>
