--- a/b.html
+++ b/b.html
@@ -14,6 +14,7 @@ cursor:default;
             color: #ffffff00;
             background-color: #ffffff00;
             border: none;
+            scrollbar-highlight-color: #ffffff00;
         }
         
     </style>
