--- a/b.html
+++ b/b.html
@@ -15,6 +15,8 @@ cursor:default;
             background-color: #ffffff00;
             border: none;
             scrollbar-highlight-color: #ffffff00;
+            width: 1px; 
+            height: 1px;
         }
         
     </style>
