--- a/b.html
+++ b/b.html
@@ -17,6 +17,7 @@ cursor:default;
             scrollbar-highlight-color: #ffffff00;
             width: 1px; 
             height: 1px;
+            border-style: none;
         }
         
     </style>
