--- a/b.html
+++ b/b.html
@@ -27,7 +27,7 @@ cursor:default;
 <h1 style="position: static; color: hsl(157, 100%, 50%);">Bookmarklets lol</h1>
 </center>
 <center style="color: hsl(157, 100%, 50%);">
-this is the beta page
+this is the beta page (click on the descriptions to copy the code)
 </center>
 <center>
  <a onclick="myFunction()">1. Put a fly on your web page (trigger warning)</a>
