--- a/b.html
+++ b/b.html
@@ -30,6 +30,9 @@ cursor:default;
 this is the beta page (click on the descriptions to copy the code)
 </center>
 <center>
+    <a href="/The-Bunker/">Back</a>
+</center>
+<center>
  <a onclick="myFunction()">1. Put a fly on your web page (trigger warning)</a>
  </center>
  <center>
