--- a/b.html
+++ b/b.html
@@ -1,5 +1,6 @@
 <html>
     <head>
+        <title>Math Help</title>
         <link rel="stylesheet" href="style.css">
         <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
     <style>
