--- a/unb.html
+++ b/unb.html
@@ -17,7 +17,7 @@
                 <center>⁣</center>
                 <center>⁣</center>
                 <center>
-                    <a href='d0wnc0rd.html' id="o">Discord</a>
+                    <a href='alloy/public/index.html' id="o">Discord</a>
                   </center>
                   <center>⁣</center>
     </body>
