afnwrebjh ASD more stuff

--- a/public/unb.html
+++ b/public/unb.html
@@ -17,7 +17,7 @@
                 <center>⁣</center>
                 <center>⁣</center>
                 <center>
-                    <a href='public/index.html' id="o">Discord</a>
+                    <a href='downcord/index.html' id="o">Discord</a>
                   </center>
                   <center>⁣</center>
     </body>
