--- a/public/unb.html
+++ b/public/unb.html
@@ -5,6 +5,7 @@
         <link rel="icon" href="192.png">
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width">
+        <title>Math Help Sites</title>
     </head>
     <body>
         <div class="cursor"></div>
@@ -17,7 +18,7 @@
                 <center>⁣</center>
                 <center>⁣</center>
                 <center>
-                    <a href='downcord/index.html' id="o">Discord</a>
+                    <a href='d0wnc0rd.html' id="o">Discord</a>
                   </center>
                   <center>⁣</center>
     </body>
