--- a/public/b.html
+++ b/public/b.html
@@ -31,7 +31,7 @@ cursor:default;
 this is the beta page (click on the descriptions to copy the code)
 </center>
 <center>
-    <a href="/The-Bunker/">Back</a>
+    <a href="index.html">Back</a>
 </center>
 <center>
  <a onclick="myFunction()">1. Put a fly on your web page (trigger warning)</a>
