--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
     <div class="cursor"></div>
       <script src="sparkle.min.js"></script>
     <center><b class="credit">Made By: sk8ordiechicago#4958 and Hosted By: Quite A Fancy Emerald
-#0001 From Titanium Network On <a href="https://discord.com/" style="text-decoration: none; color: red;" id="credita"> Discord </a> </b></center>
+#0001 From Titanium Network</center>
     <center>
       <!-- ˜”*°•.˜”*°• The Bunker •°*”˜.•°*”˜-->
     <h1 class="neon" id="headlol" data-text="The Bunker">The Bunker</h1></center>
