--- a/public/unb.html
+++ b/public/unb.html
@@ -37,6 +37,9 @@
                     <a href='ubuntu.html' id="o">Linux Ubuntu Emulator</a>
                   </center>
                   <center>⁣</center>
+                 <a href='invidious.html' id="o">Invidious(Youtube)</a>
+                  </center>
+                  <center>⁣</center>
                   <center>
                     <a href='alloy.html' id="o">Alloy Proxy</a>
                   </center>
