--- a/public/index.html
+++ b/public/index.html
@@ -36,6 +36,10 @@
     <a href='unb.html' id="o">Unblocked Sites</a>
   </center>
   <center>⁣</center>
+  <center>
+    <a href='/downloads/the-bunker_1.0.0_amd64.deb' id="o">Desktop Version</a>
+  </center>
+  <center>⁣</center>
  
   <center>
     <a href='https://olliestripadvisor.000webhostapp.com' id="o">Website To Vibe To</a>
