--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,7 @@
   </center>
   <center>⁣</center>
   <center>
-    <a href='/downloads/the-bunker_1.0.0_amd64.deb' id="o">Desktop Version</a>
+    <a href='/downloads/index.html' id="o">Desktop Version</a>
   </center>
   <center>⁣</center>
  
