--- a/public/downloads/index.html
+++ b/public/downloads/index.html
@@ -12,7 +12,7 @@
 <center>⁣</center>
 <center>⁣</center>
 <center>
-<a href='the-bunker_1.0.0_amd64.deb' id="o">Debian Package</a>
+<a href='../huge/the-bunker_1.0.0_amd64.deb' id="o">Debian Package</a>
 </center>
 <center>⁣</center>
     </body>
